# fastapi-reference-backend

./: App.jsx  Dockerfile  README.md  alembic.ini  dependencies.py  install-docker.sh  main.py  models.py  pyproject.toml  test.py
alembic/versions/: 287d785f2889_first_version.py  2fbce7ab7a2e_initial.py  670724007586_second_version.py
routes/: carts.py  products.py  sessions.py  users.py
schemas/: carts.py  products.py  users.py
tests/: test_users.py
