[project]
name = "fastapi-reference-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "psycopg>=3.3.4",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
